<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ui.create.CreateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombreCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/extensión"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_telefonoCreate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/celular"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cantidadCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:text="@string/guardar"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>