<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="55dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.update.DeleteFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombreDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_deudores"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/bt_buscarDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:text="@string/buscar"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:text="@string/eliminar"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>