<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="55dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.update.UpdateFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombreUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_opciones"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/bt_buscarUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkcyan"
            android:text="@string/buscar"
            android:textColor="@color/azure"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_buscar2Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkcyan"
            android:text="@string/buscar"
            android:textColor="@color/azure"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_extension"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/extensión"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_telefonoUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cantidadUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkcyan"
            android:text="@string/actualizar"
            android:textColor="@color/azure"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>